<resources>
    <string name="app_name">Wevuuge!</string>
    <string name="title_deal">Deal Title</string>
    <string name="price_hint">Price (number only)</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">save</string>
    <string name="delete_deal">delete_deal</string>
    <string name="upload_image">Upload Image</string>
    <string name="new_travel_deal">New Travel Deal</string>
    <string name="logout">LogOut</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="todo">TODO</string>
    <string name="dial">Dial</string>
</resources>