<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginLeft="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:contentDescription="@string/upload_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginLeft="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:textColor="@color/primaryText"
        android:text="@string/textview"
        android:textSize="@dimen/title_large"
        app:layout_constraintStart_toEndOf="@id/imageDeal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:textColor="@color/primaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_standard"
        android:layout_marginLeft="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:text="@string/textview1"
        app:layout_constraintStart_toEndOf="@+id/imageDeal"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin_standard"
        android:layout_marginTop="@dimen/text_margin_standard"
        android:layout_marginEnd="@dimen/text_margin_standard"
        android:text="@string/textview2"
        android:textColor="@color/buttonNormal"
        android:textSize="@dimen/text_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <Button
        android:id="@+id/onDialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/buttonNormal"
        android:text="@string/dial"
        android:textColor="@color/buttonText"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvPrice"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDeal"
        android:onClick="onDial"/>


</androidx.constraintlayout.widget.ConstraintLayout>

